@@ -1,3 +1,8 @@
+2004-02-17  Dominique Devriese  <devriese@kde.org>
+
+	* Add the possibility to give an item a custom color in the 
+	  popup dialog.
+
 2004-02-16  Dominique Devriese  <devriese@kde.org>
 
 	* make the usetext in TestConstructMode also appear for all other
